# Lumo

./: .gitignore  AGENTS.md  Cargo.toml  PLAN.md  README.md  biome.json  exhaustiveness-test.ts  formalization.typ  mise.toml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  references.bib  rule.typ  tsconfig.json  turbo.json
.github/workflows/: deploy.yml  playground.yml
apps/lumoc/: goal.lumo  main.lumo  package.json  tsconfig.json
apps/lumoc/src/: main.ts  old-main.ts
apps/playground/: README.md  index.html  package.json  tsconfig.json
apps/playground/src/: App.tsx  styles.css  wasm.d.ts
apps/primitive-compiler/: README.md  package.json  rolldown.config.ts  source.lumo  tsconfig.json
crates/compiler/: Cargo.toml  ast.rs  lumo.langue  syntax_kind.rs
crates/hir/: Cargo.toml  hir.langue
crates/langue/: Cargo.toml
crates/lbs/: Cargo.toml
crates/lexer/: Cargo.toml
crates/liblumoc/: Cargo.toml
crates/lir/: Cargo.toml  lir.langue
crates/lsp/: Cargo.toml
crates/lst/: Cargo.toml
crates/lumo-core/: Cargo.toml
crates/lumo-syntax/: Cargo.toml
crates/lumoc/: Cargo.toml  source.lumo  source.ron
crates/playground-wasm/: Cargo.toml
crates/playground-wasm/src/: lib.rs
crates/simple-ts-ast/: Cargo.toml
crates/span/: Cargo.toml
crates/ts-simple-ast/: Cargo.toml
crates/types/: Cargo.toml
crates/winnow-pratt/: Cargo.toml
docs/: capability-system.md
docs/design-note/: No-Pipeline-Operator.md  Type-Annotations.md
plans/: cps-optimization.md  multi-shot-resume.md  unify-impl-and-handler.md
scripts/: gen_langue.sh
(+228 files in other folders)
