[package]
name = "lumo-playground-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
lumo-compiler = { path = "../compiler" }
lumo-lsp = { path = "../lsp" }
serde = { version = "1", features = ["derive"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
serde-wasm-bindgen = "0.6"
wasm-bindgen = "0.2"
